syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/api/field_behavior.proto";
import "model/common.proto";

package model;
option go_package = "github.com/smartmemos/memos/internal/proto/model";

message User {
  int64 id = 1;
  string name =2;
  string username = 3;
  enum Role {
    ROLE_UNSPECIFIED = 0;
    HOST = 1;
    ADMIN = 2;
    USER = 3;
  }
  Role role = 4;
  string nickname = 5;
  string email = 6;
  string avatar_url = 7;
  string description = 8;
  string password = 9;
  State state = 10;
  google.protobuf.Timestamp create_at = 11;
  google.protobuf.Timestamp update_at = 12;
}